# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  demo.cast2  demo.cast3  demo.cast4  demo.cast5  demo.cast6  pyproject.toml  temp_file1.json
.github/workflows/: ci.yml
gendiff/: cli.py  file_loader.py  gendiff.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_cli.py  test_gendiff.py  test_stylish.py
tests/fixtures/: file1.yml  file2.yml
